# KayzeeOCR

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
schemas/: output_schema.json
src/: __init__.py  pipeline.py
src/input/: __init__.py  loader.py
src/model/: __init__.py  content_recognizer.py  layout_detector.py  parsing.py  prompts.py  vl_engine.py
src/postprocessing/: __init__.py  assembler.py  sorter.py  validator.py
src/preprocessing/: __init__.py  converter.py  normalizer.py  splitter.py
src/tools/: test_single_page.py
tests/: __init__.py  conftest.py  test_loader.py  test_pipeline.py  test_preprocessing.py
