[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kayzee-ocr"
version = "0.1.0"
description = "KayzeeOCR — in-house Document OCR pipeline (two-stage decoupled Qwen-VL)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "AIE OCR Team" }]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "qwen-vl-utils",
    "pillow>=10.0.0",
    "pillow-heif>=0.13.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.0.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.20.0",
    "accelerate>=0.25.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]

[project.scripts]
kayzee-ocr = "src.pipeline:main"

[tool.setuptools]
packages = [
    "src",
    "src.input",
    "src.preprocessing",
    "src.model",
    "src.postprocessing",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
